# multimodal-inference-service

./: .gitignore  LICENSE  README.md  pyproject.toml
doc/: project-steps.md
src/multimodal_inference_service/: __init__.py  app.py  config.py  vlm_pipeline.py
tests/: __init__.py  test_app.py  test_placeholder.py  ws_test.html
tools/: base64_to_image.py  image_base64.txt  image_to_base64.py
